--- a/example.html
+++ b/example.html
@@ -14,6 +14,7 @@ jQuery(document).ready(function(){
 		$('ul#example').collapsibleCheckboxTree({
 		checkParents : true, // When checking a box, all parents are checked (Default: true)
 		checkChildren : false, // When checking a box, all children are checked (Default: false)
+		shiftClickCheckChildren : true, // When shift-clicking a box, all children are checked (Default: true)
 		uncheckChildren : true, // When unchecking a box, all children are unchecked (Default: true)
 		initialState : 'default' // Options - 'expand' (fully expanded), 'collapse' (fully collapsed) or default
 												});
