Add option to include buttons or not.

--- a/example.html
+++ b/example.html
@@ -16,6 +16,7 @@ jQuery(document).ready(function(){
 		checkChildren : false, // When checking a box, all children are checked (Default: false)
 		shiftClickCheckChildren : true, // When shift-clicking a box, all children are checked (Default: true)
 		uncheckChildren : true, // When unchecking a box, all children are unchecked (Default: true)
+		includeButtons : true, // Include buttons to expand or collapse all above list (Default: true)
 		initialState : 'default' // Options - 'expand' (fully expanded), 'collapse' (fully collapsed) or default
 												});
 });
