Shift click can both check and uncheck children.

--- a/example.html
+++ b/example.html
@@ -14,7 +14,7 @@ jQuery(document).ready(function(){
 		$('ul#example').collapsibleCheckboxTree({
 		checkParents : true, // When checking a box, all parents are checked (Default: true)
 		checkChildren : false, // When checking a box, all children are checked (Default: false)
-		shiftClickCheckChildren : true, // When shift-clicking a box, all children are checked (Default: true)
+		shiftClickEffectChildren : true, // When shift-clicking a box, all children are checked or unchecked (Default: true)
 		uncheckChildren : true, // When unchecking a box, all children are unchecked (Default: true)
 		includeButtons : true, // Include buttons to expand or collapse all above list (Default: true)
 		initialState : 'default' // Options - 'expand' (fully expanded), 'collapse' (fully collapsed) or default
